# the-doors

./: .gitignore  README.md
common/: CMakeLists.txt  i2c_register_defs.h  packet_defs.h  packet_utils.c  packet_utils.h
docs/: design.odt  door-unit-pinout.txt  doors_diagram.dia  doors_door.dia  doors_high_level.dia  todo
docs/doc-assets/: doors_hub.dia  doors_intercom.dia
door-control/: .cproject  .mxproject  .project  door-control.ioc  door-control.launch
door-control/App/Common/: packet_defs.h
door-control/App/Comms/: comms_packet.h  hub_comms.c  hub_comms.h
door-control/App/Door/: door_auth.c  door_auth.h  door_control.c  door_control.h  door_interface.c  door_interface.h  door_sensor.c  door_sensor.h
door-control/App/EventLog/: event_log.c  event_log.h
door-control/App/Log/: log.c  log.h
door-control/App/UserInterface/: user_auth.c  user_interface.c  user_interface.h
door-control/App/Utils/: date_time.c  date_time.h  door_date_time.c  door_date_time.h  i2c_io.c  i2c_io.h  uart_io.c  uart_io.h
door-control/Common/: i2c_register_defs.c  i2c_register_defs.h  packet_defs.h  packet_utils.h
door-control/Core/Inc/: main.h  stm32f7xx_it.h
door-control/Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  sysmem.c
door-control/UserInterface/: user_interface.h
door-control/door/: door_auth.c  door_auth.h  door_control.c  door_control.h  door_interface.c  door_interface.h  door_packet.h
door-control/utils/: serial_io.c  serial_io.h
door-unit/: .cproject  .mxproject  .project  door-unit Debug.launch  door-unit.ioc
door-unit/App/: door_unit_main.c  door_unit_main.h
door-unit/App/Comms/: hub_comms.c  hub_comms.h
door-unit/App/Display/: display.c  display.h
door-unit/App/Door/: door_control.c  door_control.h  door_sensor.c  door_sensor.h
door-unit/App/EventLog/: event_log.c  event_log.h
door-unit/App/Persistence/: persistence.c  persistence.h
door-unit/App/UserInterface/: gui_elements.c  gui_elements.h  user_auth.c  user_auth.h  user_interface.c  user_interface.h
door-unit/App/Utils/: flash_rw.c  (+13 more)
door-unit/Audio/: audio.c  audio.h  pitches.h
door-unit/Display/: display.c  display.h
door-unit/Gfx/: app.c  app.h  fonts.c  gfx.c  gfx.h  screen.c  screen.h
door-unit/Touch/: xpt2046.c  xpt2046.h
hub-unit/: CMakeLists.txt  Makefile  build_and_deploy.sh  build_and_run.sh  build_modules.sh  build_modules_debug.sh  clean_modules.sh  common.c  deploy_daemon.sh  doors_hub.service  hub_common.c  hub_common.h  i2c_common.h  install_daemon.sh  install_modules.sh  main.c  monitor_daemon.sh  nginx.conf  nginx_conf  rebuild_modules.sh  remove_daemon.sh  restart_daemon.sh  stop_daemon.sh
hub-unit/bash_scripts/: deploy_daemon.sh
hub-unit/db_service/: CMakeLists.txt  Makefile  db_service_db.c  db_service_db.h  db_service_ipc.c  db_service_ipc.h  main.c  print_db.sh
hub-unit/door_manager/: CMakeLists.txt  Makefile  door_manager_common.c  door_manager_common.h  door_manager_i2c.c  door_manager_i2c.h  door_manager_ipc.c  door_manager_ipc.h  i2c2_init.sh  main.c
hub-unit/hub_common/: CMakeLists.txt  Makefile  hub_common.c  hub_common.h  hub_common_ipc.c  hub_common_ipc.h  hub_queue.c  hub_queue.h
hub-unit/hub_control/: CMakeLists.txt  Makefile  hub_control_daemon.c  hub_control_daemon.h  hub_control_ipc.c  hub_control_ipc.h  hub_control_processes.c  hub_control_processes.h  main.c
hub-unit/intercom_server/: CMakeLists.txt  Makefile  intercom_server_common.c  intercom_server_common.h  intercom_server_ipc.c  intercom_server_ipc.h  intercom_server_listener.c  intercom_server_listener.h  main.c  networking_common.h  server.c  server.h
hub-unit/site/: content.txt  example.txt  index.html  intercoms.txt
hub-unit/web_server/: CMakeLists.txt  Makefile  main.c  web_server_ipc.c  web_server_ipc.h  web_server_listener.c  web_server_listener.h
hub-unit/web_server/site/: Database-Service.txt  Door-Manager.txt  Intercom-Server.txt  Web-Server.txt  doors.txt  help.txt  index.html  logs.txt
intercom-unit/: CMakeLists.txt  sdkconfig
intercom-unit/main/: CMakeLists.txt  common.c  common.h  idf_component.yml  intercom-unit.c  pitches.h
intercom-unit/main/audio/: audio.c  audio.h
intercom-unit/main/client/: client.c  client.h  networking_common.c  networking_common.h
intercom-unit/main/gfx/: app.c  app.h  fonts.c  fonts.h  gfx.c  gfx.h  screen.c  screen.h
intercom-unit/main/gui/: gui.c  gui.h  gui_defs.h  gui_elements.c  gui_elements.h  gui_gfx.c  gui_gfx.h  gui_touch.c  gui_touch.h  sprites.c  sprites.h
intercom-unit/main/lcd/: lcd.c  lcd.h
intercom-unit/main/utils/: utils.c  utils.h
intercom-unit/main/wifi/: wifi.c  wifi.h
(+19 files in other folders)
